# push-new-reservation-requests

./: cloudbuild.yaml  cmdline.py  func_test_message_templates.py  func_test_slack_message.py  func_test_slack_messages.py  main.py  message_templates.py  pyproject.toml  rst.py  test_main.py
res/: new_reservation_fr.txt
templates/: new_reservation_fr.txt
